team members added

--- a/index.html
+++ b/index.html
@@ -418,6 +418,22 @@ Randall Boyes and Umair Durrani
 <p>Learn more: <a href="https://presagegroup.com/" class="uri">https://presagegroup.com/</a></p>
 </div>
 </section>
+<section id="analytics-team" class="slide level2">
+<h2>Analytics Team</h2>
+<div class="columns">
+<div class="column">
+<p><img data-src="assets/images/randy.jpg" style="width:50.0%;height:50.0%"></p>
+<p><small>Randall Boyes (Director of Analytics)</small></p>
+<p><img data-src="assets/images/amy.jpeg" style="width:35.0%;height:35.0%"><br>
+<small>Amy Ecclestone (Junior Data Analyst)</small></p>
+</div><div class="column">
+<p><img data-src="assets/images/brooke.jpg" style="width:40.0%;height:40.0%"><br>
+<small>Brooke Linden (Director of Research)</small></p>
+<p><img data-src="assets/images/umair.jpg" style="width:60.0%;height:60.0%"></p>
+<p><small>Umair Durrani (Junior Data Scientist)</small></p>
+</div>
+</div>
+</section>
 <section id="challenges-in-flight-safety" class="slide level2">
 <h2>Challenges in Flight Safety</h2>
 <div class="columns">
